--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -227,82 +227,6 @@
                     <td class="droppable"><select id="fundacion-rnm-tac-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="fundacion-rnm-tac-friday-long" disabled></select></td>
                 </tr>
-                
-                <tr><td class="separator-thick" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">CMAC Q1 Matutino</td>
-                    <td class="droppable"><select id="cmac-q1-monday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-short"></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q1 Vespertino</td>
-                    <td class="droppable"><select id="cmac-q1-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q1 Largo</td>
-                    <td class="droppable"><select id="cmac-q1-monday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-long" disabled></select></td>
-                </tr>
-                <tr><td class="separator-thin" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Matutino</td>
-                    <td class="droppable"><select id="cmac-q2-monday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-short"></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Vespertino</td>
-                    <td class="droppable"><select id="cmac-q2-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Largo</td>
-                    <td class="droppable"><select id="cmac-q2-monday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-long" disabled></select></td>
-                </tr>
-                <tr><td class="separator-thin" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Matutino</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Vespertino</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Largo</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-long"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-long"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-long"></select></td>
-                </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
                     <td class="work-site">Imágenes Hemo Matutino</td>
@@ -402,6 +326,81 @@
                     <td class="droppable"><select id="imagenes-4to-piso-wednesday-long"></select></td>
                     <td class="droppable"><select id="imagenes-4to-piso-thursday-long"></select></td>
                     <td class="droppable"><select id="imagenes-4to-piso-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thick" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Matutino</td>
+                    <td class="droppable"><select id="cmac-q1-monday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-short"></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Vespertino</td>
+                    <td class="droppable"><select id="cmac-q1-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Largo</td>
+                    <td class="droppable"><select id="cmac-q1-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Matutino</td>
+                    <td class="droppable"><select id="cmac-q2-monday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-short"></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Vespertino</td>
+                    <td class="droppable"><select id="cmac-q2-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Largo</td>
+                    <td class="droppable"><select id="cmac-q2-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Matutino</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Vespertino</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Largo</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-long"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-long"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-long"></select></td>
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
@@ -517,6 +516,14 @@
                     <td class="droppable"><select id="hospital-centenario-wednesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-centenario-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-centenario-friday-long" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Centenario Endoscopia</td>
+                    <td class="droppable"><select id="hospital-centenario-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-centenario-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-centenario-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-centenario-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-centenario-friday-short" disabled></select></td>
                 </tr>
                 <tr>
                     <td class="work-site">Hospital Castro Rendon Matutino</td>
