--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -42,6 +42,7 @@
         </div>
         <div id="availability-container" class="instructions">
             <h3>Informe de asignaciones</h3>
+            <span id="long-days-inform"></span>
             <table class="assigments-inform">
                 <thead>
                     <tr>
@@ -87,7 +88,7 @@
                         <td><div class="tooltip-wrapper"><span id="friday-compare"></span></div></td>
                     </tr>
                 </tbody>
-            </table>            
+            </table>   
         </div>
         <div class="schedule-assistant">
         <h3>Asistente propiamente dicho</h3>
