autoassign inform improvement

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -43,6 +43,7 @@
         </div>
         <div id="availability-container" class="instructions">
             <h3>Informe de asignaciones</h3>
+            <span id="long-days-inform"></span>
             <table class="assigments-inform">
                 <thead>
                     <tr>
