print schedule error fix - default report message

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -43,7 +43,7 @@
         </div>
         <div id="availability-container" class="instructions">
             <h3>Informe de asignaciones</h3>
-            <span id="long-days-inform"></span>
+            <span id="long-days-inform">Aquí se desplegará el informe luego de la asignación automática</span>
             <table class="assigments-inform">
                 <thead>
                     <tr>
