ggudino COI scheme improvement, centenario endoscopia lock button fix, mgioja exclusion from Fundación

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -23,6 +23,9 @@
             <img src="images/logo/logo.png" alt="Logo Anestesiólogos del Valle" class="app-logo">
         </a>
         <h1>Administrar Usuarios</h1>
+        <a href="index.html" class="back-to-main-menu" title="Volver al menú principal">
+            <img src="images/icons/back-icon.svg" alt="Volver" class="back-icon">
+        </a>
     </header>
     <main class="form-container">
         <h2>Seleccionar Usuario</h2>
