--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -520,12 +520,12 @@
                         <td class="droppable"><select id="hospital-centenario-friday-long" disabled></select></td>
                     </tr>
                     <tr>
-                        <td class="work-site">Hospital Centenario Endoscopia</td>
-                        <td class="droppable"><select id="hospital-centenario-monday-short" disabled></select></td>
-                        <td class="droppable"><select id="hospital-centenario-tuesday-short" disabled></select></td>
-                        <td class="droppable"><select id="hospital-centenario-wednesday-short" disabled></select></td>
-                        <td class="droppable"><select id="hospital-centenario-thursday-short" disabled></select></td>
-                        <td class="droppable"><select id="hospital-centenario-friday-short" disabled></select></td>
+                        <td class="work-site">Hospital Centenario Endoscopia Matutino</td>
+                        <td class="droppable"><select id="hospital-centenario-endoscopia-monday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-centenario-endoscopia-tuesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-centenario-endoscopia-wednesday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-centenario-endoscopia-thursday-short" disabled></select></td>
+                        <td class="droppable"><select id="hospital-centenario-endoscopia-friday-short" disabled></select></td>
                     </tr>
                     <tr>
                         <td class="work-site">Hospital Castro Rendon Matutino</td>
