--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/tooltip.css">
     <link rel="stylesheet" href="css/media.css">
-    <script defer src="js/bundle.js"></script>
+    <!-- <script defer src="js/bundle.js"></script> -->
     <script src="js/spinner.js"></script>
     <script type="module" defer src="js/weekly-schedule.js"></script>
     <script type="module" defer src="js/printSchedule.js"></script>
@@ -42,7 +42,7 @@
         </div>
         <div id="availability-container" class="instructions">
             <h3>Informe de asignaciones</h3>
-            <span id="long-days-inform"></span>
+            <span id="long-days-inform">Aquí se desplegará el informe luego de la asignación automática</span>
             <table class="assigments-inform">
                 <thead>
                     <tr>
