table responsivennes improvement

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,7 @@
             <a href="weekly-schedule.html"><button>Nueva programación plantas</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
             <a href="print-view.html"><button>Resumen programación plantas</button></a>
-            <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button>
+            <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button> -->
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1vB-44gFZ0czuDXqeHO9g-DZLP7h82Yi_/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2024/2025</button>
