--- a/frontend/print-view.html
+++ b/frontend/print-view.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/spinner.css">
+    <link rel="stylesheet" href="css/media.css">
     <script defer src="js/bundle.js"></script>
     <script defer src="js/spinner.js"></script>
     <script type="module" defer src="js/displaySummary.js"></script>
