current weekly schedule fix5

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/tooltip.css">
     <script defer src="js/spinner.js"></script>
     <script defer src="js/bundle.js"></script>
-    <script type="module" defer src="js/weekly-schedule.js"></script>
+    <!-- <script type="module" defer src="js/weekly-schedule.js"></script> -->
     <script type="module" defer src="js/load-current-schedule.js"></script>
     <script type="module" defer src="js/printSchedule.js"></script>
     <script type="module" defer src="js/warnBeforeUnload.js"></script>
