--- a/frontend/weekly-schedule.html
+++ b/frontend/weekly-schedule.html
@@ -230,6 +230,81 @@
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
+                    <td class="work-site">CMAC Q1 Matutino</td>
+                    <td class="droppable"><select id="cmac-q1-monday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-short"></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Vespertino</td>
+                    <td class="droppable"><select id="cmac-q1-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q1 Largo</td>
+                    <td class="droppable"><select id="cmac-q1-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q1-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Matutino</td>
+                    <td class="droppable"><select id="cmac-q2-monday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-short"></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Vespertino</td>
+                    <td class="droppable"><select id="cmac-q2-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Q2 Largo</td>
+                    <td class="droppable"><select id="cmac-q2-monday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-wednesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-q2-friday-long" disabled></select></td>
+                </tr>
+                <tr><td class="separator-thin" colspan="6"></td></tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Matutino</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-short"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Vespertino</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">CMAC Endoscopia Largo</td>
+                    <td class="droppable"><select id="cmac-endoscopia-monday-long"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-tuesday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-wednesday-long"></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-thursday-long" disabled></select></td>
+                    <td class="droppable"><select id="cmac-endoscopia-friday-long"></select></td>
+                </tr>
+                <tr><td class="separator-thick" colspan="6"></td></tr>
+                <tr>
                     <td class="work-site">Imágenes Hemo Matutino</td>
                     <td class="droppable"><select id="imagenes-hemo-monday-short"></select></td>
                     <td class="droppable"><select id="imagenes-hemo-tuesday-short" disabled></select></td>
@@ -330,81 +405,6 @@
                 </tr>
                 <tr><td class="separator-thick" colspan="6"></td></tr>
                 <tr>
-                    <td class="work-site">CMAC Q1 Matutino</td>
-                    <td class="droppable"><select id="cmac-q1-monday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-short"></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q1 Vespertino</td>
-                    <td class="droppable"><select id="cmac-q1-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q1 Largo</td>
-                    <td class="droppable"><select id="cmac-q1-monday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q1-friday-long" disabled></select></td>
-                </tr>
-                <tr><td class="separator-thin" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Matutino</td>
-                    <td class="droppable"><select id="cmac-q2-monday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-short"></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Vespertino</td>
-                    <td class="droppable"><select id="cmac-q2-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Q2 Largo</td>
-                    <td class="droppable"><select id="cmac-q2-monday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-wednesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-q2-friday-long" disabled></select></td>
-                </tr>
-                <tr><td class="separator-thin" colspan="6"></td></tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Matutino</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-short"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Vespertino</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-short" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-short" disabled></select></td>
-                </tr>
-                <tr>
-                    <td class="work-site">CMAC Endoscopia Largo</td>
-                    <td class="droppable"><select id="cmac-endoscopia-monday-long"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-tuesday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-wednesday-long"></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-thursday-long" disabled></select></td>
-                    <td class="droppable"><select id="cmac-endoscopia-friday-long"></select></td>
-                </tr>
-                <tr><td class="separator-thick" colspan="6"></td></tr>
-                <tr>
                     <td class="work-site">COI Matutino</td>
                     <td class="droppable"><select id="coi-monday-short"></select></td>
                     <td class="droppable"><select id="coi-tuesday-short" disabled></select></td>
@@ -485,6 +485,14 @@
                     <td class="droppable"><select id="hospital-heller-wednesday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-heller-thursday-long" disabled></select></td>
                     <td class="droppable"><select id="hospital-heller-friday-long" disabled></select></td>
+                </tr>
+                <tr>
+                    <td class="work-site">Hospital Heller Endoscopia Matutino</td>
+                    <td class="droppable"><select id="hospital-heller-endoscopy-monday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-heller-endoscopy-tuesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-heller-endoscopy-wednesday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-heller-endoscopy-thursday-short" disabled></select></td>
+                    <td class="droppable"><select id="hospital-heller-endoscopy-friday-short" disabled></select></td>
                 </tr>
                 <tr>
                     <td class="work-site">Hospital Plottier Matutino</td>
