nuevo instructivo issn, nomencladores niveles/ospepri y galeno nqn

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,11 +67,11 @@
                 <ul id="nomencladores-list-nqn" class="hidden" style="display:none;">
                     <li><a href="https://drive.google.com/file/d/1qS6kYSzh839uY0q_K_RFlKwYDSK0c56r/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Complejidades</a></li>
                     <li><a href="https://drive.google.com/file/d/1jSSkiXIWHD5sBDBkCYvH3JTGXuRjQj_O/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> ISSN</a></li>
-                    <li><a href="https://drive.google.com/file/d/1CfkqYI6d1Is44_2HprhQ1RlRBZgV8-ON/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Niveles</a></li>
+                    <li><a href="https://drive.google.com/file/d/1Xy9CJfhcL-JMroCbAKmp5MPwRVOncJSH/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> Galeno</a></li>
                     <li><a href="https://drive.google.com/file/d/1UmgxOdnOn_AXt2gJs76dALfWSRcduDih/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSDE</a></li>
-                    <li><a href="https://drive.google.com/file/d/1G7h0u650U9y39iUP4heaKxwIxuOGFOve/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI</a></li>
+                    <li><a href="https://drive.google.com/file/d/1XdTVLBVaW1jjOYoqRfB3tI8XUWL78uMA/view?usp=drive_link" target="_blank"><img src="images/icons/pdf-icon.png" alt="PDF"> OSPEPRI/NIVELES</a></li>
                 </ul>
-                <button onclick="openFile('https://drive.google.com/file/d/1QtMQM642jhLQPl9A-Et4HxemkyIrqku2/view?usp=drive_link')">Instructivo ISSN</button>
+                <button onclick="openFile('https://drive.google.com/file/d/1XWQKuVHUpscjDvMfhwf8cK5jhof-I5YB/view?usp=drive_link')">Instructivo ISSN</button>
                 <button onclick="openFile('https://drive.google.com/file/d/1TREExIbZmoKcOdS5RUwxX7f_tKjUK-J3/view?usp=drive_link')">Nomenclador por O.S</button>
             </fieldset>
             <fieldset>
