--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anestesiólogos del Valle</title>
+    <link rel="icon" type="image/png" href="images/logo/logo64x64.png">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/nav.css">
@@ -37,7 +38,6 @@
             <a href="profile.html">Mi perfil</a>
             <a href="admin.html">Administrador de perfiles</a>
             <a href="login.html" id="logout">Cerrar sesión</a>
-
         </div>
     </header>
     <nav>
