--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="css/spinner.css">
     <link rel="stylesheet" href="css/media.css">
     <link rel="stylesheet" href="css/tooltip.css">
+    <link rel="stylesheet" href="css/progressBar.css">
     <script defer src="js/spinner.js"></script>
     <script defer src="js/bundle.js"></script>
-    <!-- <script type="module" defer src="js/weekly-schedule.js"></script> -->
     <script type="module" defer src="js/load-current-schedule.js"></script>
     <script type="module" defer src="js/printSchedule.js"></script>
     <script type="module" defer src="js/warnBeforeUnload.js"></script>
@@ -39,6 +39,14 @@
                     cambie días días largos por días matutinos/vespertinos.</li>
                 <li>4. Puede asignar anestesiólogos para días individuales empleando los botones 🔄 al lado de las fechas.</li> 
                 <li>5. Puede asignar anestesiólogos para toda la semana:<button id="autoAssign-button">Asignar anestesiólogos</button></li>
+                <div id="progress-wrapper">
+                    <div id="progress-content">
+                        <div id="progress-bar-container">
+                            <div id="progress-bar"></div>
+                        </div>
+                        <p id="progress-message"></p>
+                    </div>
+                </div>
                 <li>6. Imprima:<button id="print-schedule">Imprimir Programación</button></li>
             </ol>
         </div>
