--- a/frontend/long-days-count.html
+++ b/frontend/long-days-count.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/weekly-schedule.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/media.css">
-    <script src="js/longDaysCount.js"></script>
+    <script type="module" src="js/longDaysCount.js"></script>
     <script defer src="js/bundle.js"></script>
     <script src="js/spinner.js"></script>
 </head>
@@ -36,7 +36,6 @@
                     <!-- Filas de datos se generarán dinámicamente -->
                 </tbody>
             </table>
-            <button id="fetch-long-days-count">Actualizar</button>
         </main>
     </div>
 </body>
