--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -167,6 +167,31 @@
                     </tr>
                     <tr><td class="separator-thin" colspan="6"></td></tr>
                     <tr>
+                        <td class="work-site">Fundación Q1 Cardio Matutino</td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-monday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-tuesday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-wednesday-short" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-thursday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-friday-short"></select></td>
+                    </tr>
+                    <tr>
+                        <td class="work-site">Fundación Q1 Cardio Vespertino</td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-monday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-tuesday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-wednesday-short" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-thursday-short"></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-friday-short"></select></td>
+                    </tr>
+                    <tr>
+                        <td class="work-site">Fundación Q1 Cardio Largo</td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-monday-long" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-tuesday-long" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-wednesday-long" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-thursday-long" disabled></select></td>
+                        <td class="droppable"><select id="fundacion-q1-cardio-friday-long" disabled></select></td>
+                    </tr>
+                    <tr><td class="separator-thin" colspan="6"></td></tr>
+                    <tr>
                         <td class="work-site">Fundación Q1 Matutino</td>
                         <td class="droppable"><select id="fundacion-q1-monday-short"></select></td>
                         <td class="droppable"><select id="fundacion-q1-tuesday-short"></select></td>
