--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
     <script src="js/menu.js" defer></script>
     <script src="js/nav.js" defer></script>
     <script src="js/weekly-schedule-individualized.js" defer></script>
+    <script src="js/vacationInformIndividualized.js" defer></script>
     <script src="js/pwa-install.js" defer></script>
 <body>
     <div class="spinner" id="spinner"></div>
@@ -42,6 +43,7 @@
     </header>
     <nav>
         <button onclick="showSection('programacion')">Programación</button>
+        <button onclick="showSection('vacaciones')">Vacaciones</button>
         <button onclick="showSection('facturacion')">Facturación y Nomenclado</button>
         <button onclick="showSection('liquidaciones')">Liquidaciones e Ingresos</button>
         <button onclick="showSection('reuniones')">Reuniones y Estatuto</button>
@@ -51,10 +53,15 @@
         <section id="programacion" class="content-section">
             <h3>Tus quirófanos asignados para esta semana son:</h3>
             <div id="user-assignments"></div>
+            <a href="print-view.html"><button>Resumen programación plantas</button></a>
             <a href="weekly-schedule.html"><button>Nueva programación plantas</button></a>
             <a href="current-weekly-schedule.html"><button>Modificar programación plantas en curso</button></a>
-            <a href="print-view.html"><button>Resumen programación plantas</button></a>
             <!-- <button onclick="openFile('https://docs.google.com/spreadsheets/d/18tNvZEY2VWkf3m5V7UnT1-yCWYDVAp6GggHg9hvsP0A/edit?usp=sharing')">Programación Semanal</button> -->
+        </section>
+        <section id="vacaciones" class="content-section">
+        <h3>Tus próximos períodos de vacaciones son:</h3>
+            <div id="vacation-inform"></div>
+            <a href="vacationInform.html"><button>Informe de vacaciones</button></a>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1vB-44gFZ0czuDXqeHO9g-DZLP7h82Yi_/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2024/2025</button>
