lburgueño schedule modif, ltotis schedule modif

--- a/frontend/current-weekly-schedule.html
+++ b/frontend/current-weekly-schedule.html
@@ -520,7 +520,7 @@
                         <td class="droppable"><select id="hospital-allen-monday-long" disabled></select></td>
                         <td class="droppable"><select id="hospital-allen-tuesday-long"></select></td>
                         <td class="droppable"><select id="hospital-allen-wednesday-long" disabled></select></td>
-                        <td class="droppable"><select id="hospital-allen-thursday-long"></select></td>
+                        <td class="droppable"><select id="hospital-allen-thursday-long" disabled></select></td>
                         <td class="droppable"><select id="hospital-allen-friday-long" disabled></select></td>
                     </tr>
                     <tr><td class="separator-thick" colspan="6"></td></tr>
