--- a/frontend/index.html
+++ b/frontend/index.html
@@ -67,7 +67,7 @@
         <h3>Tus próximos períodos de vacaciones son:</h3>
             <div id="vacation-inform"></div>
             <a href="vacationInform.html"><button>Informe de vacaciones</button></a>
-            <!-- <a href="vacationSwap.html"><button>Intercambio de vacaciones</button></a> -->
+            <a href="vacationSwap.html"><button>Intercambio de vacaciones</button></a>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1IIAo4YHyBavQmA7iN3xVwhW9NncDwYU-3PpnL81d4TE/edit?usp=sharing')">Vacaciones y Guardias 2024</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1CBU7nXGDil2BPH5Ow2KOA7YgT9-LyGmtJSqBaOOmwng/edit?usp=sharing')">Vacaciones y Guardias 2025</button>
             <button onclick="openFile('https://docs.google.com/spreadsheets/d/1vB-44gFZ0czuDXqeHO9g-DZLP7h82Yi_/edit?usp=sharing&ouid=116849778907664010256&rtpof=true&sd=true')">Resultado sorteo vacaciones 2024/2025</button>
