notificationjs y Utils reorder

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
     <script src="js/nav.js" defer></script>
     <script src="js/weekly-schedule-individualized.js" defer></script>
     <script src="js/vacationInformIndividualized.js" defer></script>
-    <script src="js/notifications.js" defer></script>
+    <script type="module" src="js/notifications.js"></script>
     <script src="js/pwa-install.js" defer></script>
 <body>
     <div class="spinner" id="spinner"></div>
